Fix linebreak on form field in ticket view (#21478)

--- a/css/includes/_base.scss
+++ b/css/includes/_base.scss
@@ -510,6 +510,16 @@ body pre {
     }
 }
 
+.itil-object-fields .col-12.glpi-full-width {
+    .col-form-label {
+        width: 28%;
+    }
+
+    .field-container {
+        width: 72%;
+    }
+}
+
 // Needed as 'text-muted' may not always be readable depending on the menu
 // background color.
 .horizontal-layout  {
